--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,3 +31,5 @@ Packaged: 2018-11-30 04:06:13 UTC; suzu
 Author: Lindsay Rutter [aut, cre],
   Dianne Cook [aut]
 Maintainer: Lindsay Rutter <lindsayannerutter@gmail.com>
+LazyData: true
+Encoding: UTF-8
